# Agent-assignment

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.production  ENGINEERING_NOTES.md  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  init_vector_store.py  nginx.conf  pyproject.toml  requirements-core.txt  requirements-ml.txt  requirements.txt  run_evaluation.py  startup.production.sh  startup.sh
app/: __init__.py  main.py
app/api/: ask.py  health.py  metrics.py  models.py
app/core/: config.py  llm.py  logging.py  metrics.py
app/eval/: evaluation_report.json  evaluation_script.py  test_qa.json
app/kb/notes/: bearing_capacity_fundamentals.md  cpt_analysis_settle3.md  liquefaction_settle3.md  settle3_help_overview.md  settlement_analysis_methods.md  soil_parameters_correlations.md
app/pipeline/: __init__.py  compute.py  decision.py  orchestrator.py  retriever.py  synthesis.py
app/retriever/: __init__.py  chunker.py  embedder.py  loader.py  store.py
app/tools/: __init__.py  settlement.py  tables.py  terzaghi.py
static/: index.html  script.js  styles.css
